--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@docusaurus/theme-live-codeblock": "*",
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
-    "redocusaurus": "^0.5.0",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "redocusaurus": "^0.5.0"
   },
   "browserslist": {
     "production": [
